# qgis_salah_mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
qgis_salah_mcp_plugin/: __init__.py  compat.py  metadata.txt  qgis_salah_mcp_plugin.py
src/qgis_salah_mcp/: __init__.py  server.py
