[project]
name = "qgis-salah-mcp"
version = "1.0.0"
description = "MCP server that connects Claude to QGIS via the QGIS Salah MCP plugin"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.scripts]
qgis-salah-mcp = "qgis_salah_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qgis_salah_mcp"]
